fix overlapping in contact form

--- a/styles.css
+++ b/styles.css
@@ -302,7 +302,6 @@ li {
 }
 
 form {
-  height: 40vh;
   width: 80vw;
   justify-content: center;
 }
